--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
         <span id="year">
             Webservice Year
         </span>
+
+        <script src="script.js">
+            
+        </script>
     </body>
 </html>
